--- a/Assignment-Assist/package.json
+++ b/Assignment-Assist/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-pdf": "^7.5.1",
+    "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
